<resources>
    <string name="app_name">Lapify1.0</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">REGISTER</string>
    <string name="login_to_proceed">Please Login to proceed</string>
    <string name="user_message">WELCOME</string>
    <string name="loginBtn">LOGIN</string>
    <string name="register_with_us">REGISTER WITH US</string>
    <string name="already_registered">Already Registered?</string>
    <string name="last_name">Last name</string>
    <string name="firstname">firstname</string>
    <string name="email">Email</string>
</resources>
