<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:backgroundTintMode="screen"
        android:text="@string/user_message"/>

    <TextView
        android:layout_width="200dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:text="@string/login_to_proceed"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#A7794B"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/not_registered" />

        <TextView
            android:id="@+id/RegisterTxtVw"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:paddingLeft="10dp"
            android:text="@string/register" />

    </LinearLayout>


</LinearLayout>